--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
- - 2.3.1
- - 2.4.0
+ - 2.4.1
+ - ruby-head
 gemfile:
  - gemfiles/rails4_2.gemfile
  - gemfiles/rails5.gemfile
